--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "8.24.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "yajra/laravel-datatables": "1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
